--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,60 +1,56 @@
 			<footer class="footer">
 				<div class="row container-fluid m-0 p-4">
-					<div class="col-lg-4">
-							<h4 class="text-center text-secondary font-weight-light">Contact me</h4>
-							<hr class="my-2">
-							<p class="pb-2 m-0 pl-3">
-								<a class="footer-a" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=monika.intaite@gmail.com" target="_blank"><i class="fab fa-google-plus-square fa-lg"></i> monika.intaite@gmail.com</a>
-							</p>
-							<p class="pb-2 m-0 pl-3">
-								<a class="footer-a" href="https://www.linkedin.com/in/monint/" target="_blank"><i class="fab fa-linkedin fa-lg"></i> linkedin.com/in/monint</a>
-							</p>
-							<p class="pb-2 m-0 pl-3">
-								<a class="footer-a" href="https://github.com/monint578" target="_blank"><i class="fab fa-github-square fa-lg"></i> github.com/monint578</a>
-							</p>
-							<p class="pb-1 m-0 pl-3">
-								<a class="footer-a" href="/img/monika_intaite_eng.pdf" target="_blank"><i class="fas fa-file-pdf fa-lg" target="_blank"></i> Download CV</a>
-							</p>
+					<div class="py-1 col-lg-4 col-md-6 order-lg-1 order-2">
+						<h4 class="text-center text-secondary font-weight-light">Contact me</h4>
+						<hr class="my-2">
+						<p class="pb-2 m-0 pl-3">
+							<a class="footer-a" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=monika.intaite@gmail.com" target="_blank"><i class="fab fa-google-plus-square fa-lg"></i> monika.intaite@gmail.com</a>
+						</p>
+						<p class="pb-2 m-0 pl-3">
+							<a class="footer-a" href="https://www.linkedin.com/in/monint/" target="_blank"><i class="fab fa-linkedin fa-lg"></i> linkedin.com/in/monint</a>
+						</p>
+						<p class="pb-2 m-0 pl-3">
+							<a class="footer-a" href="https://github.com/monint578" target="_blank"><i class="fab fa-github-square fa-lg"></i> github.com/monint578</a>
+						</p>
+						<p class="pb-1 m-0 pl-3">
+							<a class="footer-a" href="/img/monika_intaite_eng.pdf" target="_blank"><i class="fas fa-file-pdf fa-lg" target="_blank"></i> Download CV</a>
+						</p>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 py-1 col-md-6 order-lg-2 order-1">
 						<h4 class="text-center text-secondary font-weight-light">About Toraberu project</h4>
 						<hr class="my-2">
 						<p class="text-secondary pb-1 m-0 px-3 text-justify">This Toraberu project was made by remaking YelpCamp project from Udemy course. You can look how it was changed here: <a class="footer-a" href="#"><em>www.yelpcamp.heroku.com</em></a>. I have finished Udemy course: The Web Developer Bootcamp.</p>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 py-1 order-lg-3 order-3">
 							<h4 class="text-center text-secondary font-weight-light">Technologies used</h4>
 							<hr class="my-2">
 							<div class="row text-center">
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><i class="fab fa-html5 fa-2x"></i></a>
+								<div class="col-sm-4 order-sm-1 col-2 order-1 py-1">
+									<p class="footer-a"><i class="fab fa-html5 fa-2x"></i></p>
 								</div>
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><i class="fab fa-node fa-3x" ></i></a>
+								<div class="col-sm-4 order-sm-2 col-4 order-7 py-1">
+									<p class="footer-a"><i class="fab fa-node fa-3x" ></i></p>
 								</div>
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><i class="fab fa-bootstrap fa-2x"></i></a>
+								<div class="col-sm-4 order-sm-3 col-2 order-2 py-1">
+									<p class="footer-a"><i class="fab fa-bootstrap fa-2x"></i></p>
 								</div>
-							</div>
-							<div class="row text-center">
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><i class="fab fa-css3-alt fa-2x"></i></a>
+								<div class="col-sm-4 order-sm-4 col-2 order-3 py-1">
+									<p class="footer-a"><i class="fab fa-css3-alt fa-2x"></i></p>
 								</div>
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><img class="img-fluid footer-mongo" style="height: 30px;" src="/img/express-seeklogo.com.svg"></a>
+								<div class="col-sm-4 order-sm-5 col-4 order-8 py-1">
+									<p class="footer-a"><img class="img-fluid footer-mongo" style="height: 25px;" src="/img/express-seeklogo.com.svg"></p>
 								</div>
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><i class="fab fa-docker fa-2x"></i></a>
+								<div class="col-sm-4 order-sm-6 col-2 order-4 py-1">
+									<p class="footer-a"><i class="fab fa-docker fa-2x"></i></p>
 								</div>
-							</div>
-							<div class="row text-center pt-3">
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><i class="fab fa-js-square fa-2x"></i></a>
+								<div class="col-sm-4 order-sm-7 col-2 order-5 py-1">
+									<p class="footer-a"><i class="fab fa-js-square fa-2x"></i></p>
 								</div>
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><img class="img-fluid footer-mongo" style="height: 30px;" src="/img/mongodb-logo.png"></a>
+								<div class="col-sm-4 order-sm-8 col-4 order-9 py-1">
+									<p class="footer-a"><img class="img-fluid footer-mongo" style="height: 30px;" src="/img/mongodb-logo.png"></p>
 								</div>
-								<div class="col-sm-4">
-									<a class="footer-a" href="#"><i class="fab fa-git-square fa-2x"></i></a>
+								<div class="col-sm-4 order-sm-9 col-2 order-6 py-1">
+									<p class="footer-a"><i class="fab fa-git-square fa-2x"></i></p>
 								</div>
 							</div>
 					</div>
