--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,8 +1,8 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid pt-4 px-5">
+<div class="container-fluid">
   <div class="maid-container">
-      <h1 class="text-center"><em><%= currentUser.displayName %></em> profile page</h1>
+      <h1 class="text-center display-5"><em><%= currentUser.displayName %></em> profile page</h1>
       <br>
       <form action="/register" method="POST">
         <div class="form-group row">
