--- a/views/content/content.ejs
+++ b/views/content/content.ejs
@@ -1,7 +1,7 @@
 <%- include ("../partials/header") %>
 
 <div class="container-fluid px-4 heightvh">
-	<header class="jumbotron m-0 p-4">
+	<header class="jumbotron m-0">
 		<h1 class="display-4">Welcome to Toraberu!</h1>
         <p class="lead font-weight-normal">Toraberu is our hand-picked <em>unbelievable</em> places for you to visit</p>
         <% if(currentUser) { %>
@@ -25,8 +25,8 @@
                     <h4 class="card-title text-left m-0 pl-2 py-1"><%= content.name %></h4>
                     <p class="card-text text-left text-secondary pl-2 m-0"><%= content.description.substring(0, 150) %>...</p>
                     <hr class="my-1">
-                    <div class="row m-0">
-                        <div class="col-lg-6 col-md-6 py-1 pl-2 text-left">
+                    <div class="d-flex justify-content-between">
+                        <div class="py-1 pl-2">
                             <% if (content.rating === 0) { %>
                                 <em>No reviews yet.</em>
                                 <% } else { %>
@@ -37,7 +37,7 @@
                                     <span class="<% if (content.rating > 4.5) { %> fas fa-star checked <% } else { %> far fa-star checked <% }; %>"></span>
                                 <% } %>
                         </div> 
-                        <div class="col-md-6 py-1 pr-2 text-right">
+                        <div class="py-1 pr-2">
                             <p class="m-0"><a href="/places/<%= content._id %>" class="">Read more <i class="fas fa-angle-double-right"></i></a></p>
                         </div>
                     </div>
