--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,9 +12,9 @@
 		<title>Toraberu</title>
   </head>
   <body class="row align-items-center">
-    <div class="col-md-6 login-form-left">
+    <div class="col-md-5 col-lg-6 login-form-left">
     </div>
-    <div class="col-md-6 login-form-right">
+    <div class="col-md-7 col-lg-6 login-form-right">
       <br>
       <h1 class="text-center text-info display-4"><i class="fas fa-map-marked-alt fa-sm"></i> Toraberu</h1>
       <h4 class="text-center font-weight-light">Please login</h4>
@@ -34,9 +34,10 @@
         </div>
       </div>
     </div>
-  </body>
       <script src="https://kit.fontawesome.com/3d60d52d76.js" crossorigin="anonymous"></script>
 			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
+</html>
       
