--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<!-- Required meta tags -->
@@ -12,9 +12,9 @@
 		<title>Toraberu</title>
   </head>
   <body class="row align-items-center">
-    <div class="col-md-6 login-form-left">
+    <div class="col-md-5 col-lg-6 login-form-left">
     </div>
-    <div class="col-md-6 login-form-right">
+    <div class="col-md-7 col-lg-6 login-form-right">
       <br>
       <h1 class="text-center text-info display-4"><i class="fas fa-map-marked-alt fa-sm"></i> Toraberu</h1>
       <h4 class="text-center font-weight-light">Please register</h4>
@@ -26,11 +26,12 @@
             <input class="form-control" type="email" name="username" placeholder="not.fake@gmail.com" required>
           </div>
           <div class="form-group">
-            <input class="form-control" aria-describedby="passwordHelpBlock" type="password" name="password" id="password" placeholder="password123" required pattern="(?=.*\d)(?=.*[a-z]).{7,}">
-            <small id="passwordHelpBlock" class="form-text  text-muted">Must be more than 7 character long and have numbers in it. "pasword123" is definately not suitable</small>
+            <input class="form-control" type="password" name="password" id="password" placeholder="password123" required pattern="(?=.*\d)(?=.*[a-z]).{7,}">
+            <small class="form-text  text-muted">Must be more than 7 character long and have numbers in it. "pasword123" is definately not suitable</small>
           </div>
           <div class="form-group">
-            <input class="form-control" type="password" name="password2" id="confirm_password" placeholder="password123 (one more time)" required>
+            <input class="form-control" type="password" name="password2" id="confirm_password" placeholder="password123" required>
+            <small class="form-text text-muted">Write password one more time</small>
           </div>
           <button class="btn btn-lg btn-outline-info btn-block">Sign Up!</button>
         </form>
@@ -40,7 +41,6 @@
         </div>
       </div>
     </div>
-  </body>
       <script src="https://kit.fontawesome.com/3d60d52d76.js" crossorigin="anonymous"></script>
 			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -59,3 +59,5 @@
         password.onchange = validatePassword;
         confirm_password.onkeyup = validatePassword;
       </script>
+  </body>
+</html>
