--- a/views/reviews/added.ejs
+++ b/views/reviews/added.ejs
@@ -2,21 +2,13 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">
-          You already added your review
-        </h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <h5 class="modal-title" id="exampleModalLongTitle">You already added your review</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" >
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        You can change your review by clicking on button <button class="btn btn-outline-info btn-sm disable">Edit review</button> near written review
-        text.
+        You can change your review by clicking on button "Edit review" button near written review text.
       </div>
     </div>
   </div>
