--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -3,7 +3,7 @@
 
 <div class="container-fluid heightvh">
         <h1 class="text-center">Change Review</h1>
-        <div style="width: 30%; margin: 25px auto;">
+        <div class="maid-container">
             <form action="/places/<%= content_id %>/reviews/<%= review._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <label for="rating">Leave a rating:</label>
