--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,11 +1,11 @@
 <%- include ("../partials/header") %>
 
-<div class="container-fluid pt-4 px-5">
+<div class="container-fluid">
     <div class="maid-container">
-      <h1 class="text-center">Edit <em><%= currentUser.displayName %></em> profile page</h1>
+      <h1 class="text-center display-5">Edit <em><%= currentUser.displayName %></em> profile page</h1>
       <br>
         <form action="/user/<%= currentUser._id %>/?_method=PUT" method="POST">
-            <div class="form-group row">
+          <div class="form-group row">
                 <label class="col-sm-3 control-label">Username:</label>
                 <div class="col-sm-9">
                     <input class="form-control" type="text" name="currentUser[displayName]" value="<%= currentUser.displayName %>" readonly>
@@ -29,18 +29,6 @@
                     <input class="form-control" type="text" name="currentUser[lastName]" value="<%= currentUser.lastName %>">
                 </div>
               </div>
-              <!-- <div class="form-group row">
-                <label class="col-sm-3 control-label">Avatar img url:</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" name="currentUser[avatar]" value="<%= currentUser.avatar%>">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-sm-3 control-label">OR</label>
-                <div class="col-sm-9">
-                    <input class="form-control-file" type="file" name="currentUser[avatar]">
-                </div>
-              </div> -->
               <div class="form-group row">
                 <label class="col-sm-3 control-label">More about You:</label>
                 <div class="col-sm-9">
