--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -1,17 +1,16 @@
 <%- include ("../partials/header") %>
 
 <div class="container-fluid heightvh">
-    <header class="jumbotron py-3 px-5 mb-0">
+    <header class="jumbotron mb-0">
 		<h1 class="display-5">"<%= content.name %>" comments page</h1>
-        <p class="lead"></p>
-        <a class="btn btn-info" href="/places/<%= content._id %>"><i class="fas fa-angle-double-left"></i> Go back</a>
+        <a class="btn btn-info lead-btn" href="/places/<%= content._id %>"><i class="fas fa-angle-double-left"></i> Go back</a>
         <% if(currentUser) { %>
             <span class="mb-1">
-                <a class="btn btn-info" data-toggle="modal" data-target="#ModalComments" href="#">Write a New Comment</a>
+                <a class="btn btn-info lead-btn" data-toggle="modal" data-target="#ModalComments" href="#">Write a New Comment</a>
             </span>
         <% } else { %>
             <span class="mb-1">
-                <a data-toggle="modal" data-target="#IsLoggedIn" class="btn btn-info" href="#">Write a New Comment</a>
+                <a data-toggle="modal lead-btn" data-target="#IsLoggedIn" class="btn btn-info" href="#">Write a New Comment</a>
             </span>
         <% }; %>
     </header>
