--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -19,7 +19,7 @@
 					<div class="col-lg-4 py-1 col-md-6 order-lg-2 order-1">
 						<h4 class="text-center text-secondary font-weight-light">About Toraberu project</h4>
 						<hr class="my-2">
-						<p class="text-secondary pb-1 m-0 px-3 text-justify">This Toraberu project was made by remaking YelpCamp project from Udemy course. You can look how it was changed here: <a class="footer-a" href="#"><em>www.yelpcamp.heroku.com</em></a>. I have finished Udemy course: The Web Developer Bootcamp.</p>
+						<p class="text-secondary pb-1 m-0 px-3 text-justify">This Toraberu project was made by remaking YelpCamp project from Udemy course. You can look how it was changed here: <a class="footer-a" href="https://monint-yelpcamp.herokuapp.com" target="_blank"><em>www.monint-yelpcamp.herokuapp.com</em></a>. I have finished Udemy course: The Web Developer Bootcamp.</p>
 					</div>
 					<div class="col-lg-4 py-1 order-lg-3 order-3">
 							<h4 class="text-center text-secondary font-weight-light">Technologies used</h4>
