--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -2,7 +2,7 @@
 
 
 <div class="container-fluid heightvh">
-        <h1 class="text-center">Change Review</h1>
+        <h1 class="text-center edit-name">Change Review</h1>
         <div class="maid-container">
             <form action="/places/<%= content_id %>/reviews/<%= review._id %>?_method=PUT" method="POST">
                 <div class="form-group">
