--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -123,7 +123,7 @@ a:hover {
 .carousel-inner img {
   width: 100%;
   height: 50vh;
-  object-fit: none;
+  object-fit: cover;
 }
 
 /*LANDING PAGE*/
