--- a/views/content/show.ejs
+++ b/views/content/show.ejs
@@ -77,14 +77,14 @@
                                 <a data-toggle="modal" data-target="#ModalReviewsAdded" class="btn btn-info btn-sm a-link">Write a New Review</a>
                                 <%- include ("../reviews/added") %>
                             <% } else { %>
-                                <a data-toggle="modal" data-target="#ModalReviews" class="btn btn-info btn-sm">Write a New Review</a>
+                                <a data-toggle="modal" data-target="#ModalReviews" class="btn btn-info btn-sm a-link">Write a New Review</a>
                                 <%- include ("../reviews/new") %>
                             <% }; %>
                             <p class="delete-form"><a href="/places/<%= content._id %>/reviews"><i class="fas fa-search" aria-hidden="true"></i> See all reviews</a></p>
                         </div>
                     <% } else { %>
                         <div class="mb-1 modal-edit">
-                            <a data-toggle="modal" data-target="#IsLoggedIn" class="btn btn-info btn-sm" href="#">Write a New Review</a>
+                            <a data-toggle="modal" data-target="#IsLoggedIn" class="btn btn-info btn-sm a-link" href="#">Write a New Review</a>
                             <p class="delete-form"><a href="/places/<%= content._id %>/reviews"><i class="fas fa-search" aria-hidden="true"></i> See all reviews</a></p>
                         </div>
                     <% }; %>
