--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -257,9 +257,17 @@ a:hover {
     width: 100%;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 599px) {
   #landing-header {
-    margin: 35vh 10px;
+    margin: 30vh 2vh;
+  }
+  html {
+    height: 100vh;
+  }
+}
+@media (min-width: 600px) {
+  #landing-header {
+    margin: 35vh 20vh;
   }
 }
 @media (max-width: 767px) {
@@ -296,12 +304,15 @@ a:hover {
     height: 30vh;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .carousel-padding {
     padding-top: 40px;
   }
+  #landing-header {
+    margin: 35vh 35vh;
+  }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1025px) {
   .carousel-inner img {
     height: 35vh;
   }
@@ -312,8 +323,5 @@ a:hover {
 @media (max-width: 1440px) {
   .card-img-top {
     height: 25vh;
-  }
-  #landing-header {
-    margin: 35vh 20vh;
   }
 }
